--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       id: go
 
     - name: Check out code into the Go module directory
-      run: actions/checkout@v2
+      uses: actions/checkout@v2
 
     - name: Test
       run: make test
