--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,14 @@ jobs:
         go-version: ^1.20
       id: go
 
-    - name: Run migrations
-      run: make migrateup
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+
+    - name: Install golang migrate
+      run: curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
+
+    - name: Run migrations
+      run: make migrateup
 
     - name: Test
       run: make test
