--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install golang migrate
-      run: curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
-
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz | tar xvz
+        mv migrate.linux-amd64 /usr/bin/
+        which migrate
+        
     - name: Run migrations
       run: make migrateup
 
