--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,9 @@ jobs:
     - name: Install golang migrate
       run: |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz | tar xvz
-        mv migrate.linux-amd64 /usr/bin/
+        mv migrate.linux-amd64 /usr/bin/migrate
         which migrate
-        
+
     - name: Run migrations
       run: make migrateup
 
